Get user documents
