# src/backend/documents/api/api-swagger.yaml
@@ -148,7 +148,7 @@ paths:
   '/documents/{token}':
     get:
       tags:
-        - document
+        - documents
       summary: Get all documents
       description: Returns list of documents in database
       operationId: getDocuments
@@ -175,6 +175,55 @@ paths:
           description: Search documents with given string (in name)
           required: false
           type: string
+      responses:
+        '200':
+          description: Successful operation
+          schema:
+            type: object
+            properties:
+              total:
+                type: integer
+                description: Total number of results (before limit and offset)
+              result:
+                type: array
+                items:
+                  $ref: '#/definitions/DocumentNoData'
+        '403':
+          description: Invalid token or token expired
+        '404':
+          description: Documents not found
+        '500':
+          description: Internal server error
+  '/user/{login}/documents/{token}':
+    get:
+      tags:
+        - documents
+      summary: Get all user documents
+      description: Returns list of user documents in database
+      operationId: getUserDocuments
+      produces:
+        - application/json
+      parameters:
+        - name: login
+          in: path
+          description: User login
+          required: true
+          type: string
+        - name: token
+          in: path
+          description: Token of a user making a request
+          required: true
+          type: string
+        - name: offset
+          in: query
+          description: Offset results by given number
+          required: false
+          type: integer
+        - name: limit
+          in: query
+          description: Limit number of results by given number
+          required: false
+          type: integer
       responses:
         '200':
           description: Successful operation
